--- a/.github/workflows/templates/deploy-prod.yml
+++ b/.github/workflows/templates/deploy-prod.yml
@@ -16,7 +16,8 @@ name: 'Deploy production instance'
 jobs:
   deploy:
     name: 'deployment'
-    runs-on: self-hosted
+    runs-on:
+      labels: 'drupal'
     steps:
       - name: 'Checkout source code'
         uses: actions/checkout@v3
