--- a/.github/workflows/templates/deploy-prod.yml
+++ b/.github/workflows/templates/deploy-prod.yml
@@ -19,6 +19,12 @@ jobs:
     runs-on:
       labels: 'drupal'
     steps:
+      - name: Fail if a branch was selected
+        if: github.event_name == 'workflow_dispatch' && !startsWith(github.ref, 'refs/tags/')
+        run: |
+          echo "This workflow should not be triggered with workflow_dispatch on a branch. Please choose a tag."
+          exit 1
+
       - name: 'Checkout source code'
         uses: actions/checkout@v3
         with:
