--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         "composer/installers": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3",
-        "drupal/core-composer-scaffold": "~10.1.0",
-        "drupal/core-recommended": "~10.1.0",
+        "drupal/core-composer-scaffold": "~10.2.0",
+        "drupal/core-recommended": "~10.2.0",
         "drush/drush": "^12.4.3",
         "getdkan/dkan": "^2.16.15"
     },
     "require-dev": {
-        "drupal/core-dev": "~10.1.0",
+        "drupal/core-dev": "~10.2.0",
         "getdkan/mock-chain": "^1.3.0",
         "phpspec/prophecy-phpunit": "^2",
         "weitzman/drupal-test-traits": "^2.0.1"
@@ -45,7 +45,8 @@
             "cweagans/composer-patches": true,
             "oomphinc/composer-installers-extender": true,
             "drupal/core-composer-scaffold": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         },
         "sort-packages": true
     },
