--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require-dev": {
         "drupal/core-dev": "~10.2.0",
         "getdkan/mock-chain": "^1.3.6",
+        "osteel/openapi-httpfoundation-testing": "<1.0",
         "weitzman/drupal-test-traits": "^2.0.1"
     },
     "conflict": {
