--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -61,6 +61,7 @@ module:
   language: 0
   layout_builder: 0
   layout_builder_browser: 0
+  layout_builder_expose_all_field_blocks: 0
   layout_builder_modal: 0
   layout_builder_restrictions: 0
   layout_builder_st: 0
