--- a/config/default/node.type.news.yml
+++ b/config/default/node.type.news.yml
@@ -11,8 +11,8 @@ third_party_settings:
     parent: 'main:'
 name: News
 type: news
-description: ''
-help: ''
+description: null
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: true
