--- a/config/default/node.type.page.yml
+++ b/config/default/node.type.page.yml
@@ -12,7 +12,7 @@ third_party_settings:
 name: Page
 type: page
 description: 'Add a page to your website'
-help: ''
+help: null
 new_revision: true
 preview_mode: 0
 display_submitted: false
