--- a/config/default/taxonomy.vocabulary.news_types.yml
+++ b/config/default/taxonomy.vocabulary.news_types.yml
@@ -4,5 +4,6 @@ status: true
 dependencies: {  }
 name: 'News types'
 vid: news_types
-description: ''
+description: null
 weight: 0
+new_revision: false
