--- a/config/default/views.view.search.yml
+++ b/config/default/views.view.search.yml
@@ -95,6 +95,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 3
+          pagination_heading_level: h4
       exposed_form:
         type: basic
         options:
