--- a/config/default/extlink.settings.yml
+++ b/config/default/extlink.settings.yml
@@ -1,5 +1,6 @@
 _core:
   default_config_hash: vOaSYBgSyTzn8_p0MSY8B-ygp9V0Nc6qnX0vy9KYGeo
+langcode: en
 extlink_use_external_js_file: false
 extlink_exclude_admin_routes: true
 extlink_target: true
