fail on failed patch

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "sort-packages": true
     },
     "extra": {
+        "composer-exit-on-patch-failure": true,
         "drupal-scaffold": {
             "locations": {
                 "web-root": "docroot/"
