disallow tbachert/spi Composer plugin

--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
             "drupal/core-composer-scaffold": true,
             "oomphinc/composer-installers-extender": true,
             "php-http/discovery": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "tbachert/spi": false
         },
         "sort-packages": true
     },
