Update Drupal core patch for 10.3

--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,7 @@
         ],
         "patches": {
             "drupal/core": {
-                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2024-08-12/2893933-queue_lease_time-11.x-75.patch"
+                "2893933: claimItem in the database and memory queues does not use expire correctly": "https://www.drupal.org/files/issues/2024-10-21/2893933-75-rerolled-for-10-3.patch"
             }
         }
     }
