refs #27985 Break down deployment into separate jobs

--- a/.github/workflows/templates/config-info-prod.yml
+++ b/.github/workflows/templates/config-info-prod.yml
@@ -6,7 +6,7 @@ jobs:
   deploy:
     name: 'Show Drupal config status'
     runs-on:
-      labels: 'drupal'
+      labels: 'drupal-runner-v2'
     steps:
       - name: 'Check Drupal configuration'
         uses: eaudeweb/drupal-config-status-action@1.x
