--- a/.github/workflows/templates/sql-dump.yml
+++ b/.github/workflows/templates/sql-dump.yml
@@ -6,7 +6,7 @@ jobs:
   deploy:
     name: 'Dump SQL database'
     runs-on:
-      labels: 'drupal'
+      labels: 'drupal-runner-v2'
     steps:
       - name: 'Dump SQL database'
         uses: eaudeweb/drupal-sql-dump-action@1.x
