--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "php-tuf/composer-integration": true
         },
         "sort-packages": true
     },
