--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "composer/installers": "^2.3",
         "drupal/core-composer-scaffold": "^11",
+        "drupal/core-recipe-unpack": "^11",
         "drupal/core-project-message": "^11",
         "drupal/core-recommended": "^11"
     },
@@ -32,6 +33,7 @@
         "allow-plugins": {
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
+            "drupal/core-recipe-unpack": true,
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
