--- a/composer.json
+++ b/composer.json
@@ -99,9 +99,9 @@
         "drupal/ckeditor_bs_grid": "^2.0",
         "drupal/clamav": "^2.0.2@RC",
         "drupal/conditional_fields": "^4.0@alpha",
-        "drupal/core-composer-scaffold": "10.3.2",
-        "drupal/core-project-message": "10.3.2",
-        "drupal/core-recommended": "10.3.2",
+        "drupal/core-composer-scaffold": "^10.4",
+        "drupal/core-project-message": "^10.4",
+        "drupal/core-recommended": "^10.4",
         "drupal/crop": "^2.3",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.0",
@@ -182,7 +182,8 @@
             "drupal/core-project-message": true,
             "phpstan/extension-installer": true,
             "oomphinc/composer-installers-extender": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "tbachert/spi": true
         },
         "platform": {
             "php": "8.1"
