refs#30610 update modules

--- a/config/default/smtp.settings.yml
+++ b/config/default/smtp.settings.yml
@@ -14,7 +14,7 @@ smtp_from: ''
 smtp_fromname: ''
 smtp_client_hostname: ''
 smtp_client_helo: ''
-smtp_allowhtml: '0'
+smtp_allowhtml: false
 smtp_test_address: ''
 smtp_debugging: false
 prev_mail_system: php_mail
