--- a/composer.json
+++ b/composer.json
@@ -85,65 +85,71 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "drupal/adequate_passwords": "^1.0",
-        "drupal/admin_toolbar": "^3.1",
+        "drupal/admin_toolbar": "^3.6",
         "drupal/advagg": "^6.0@alpha",
-        "drupal/ajax_loader": "^2.0",
+        "drupal/ajax_loader": "^2.1",
         "drupal/allowed_formats": "^1.5",
-        "drupal/autologout": "^1.4",
-        "drupal/backup_migrate": "^5.0",
-        "drupal/blazy": "^2.22",
+        "drupal/autologout": "^1.6",
+        "drupal/backup_migrate": "^5.1",
+        "drupal/blazy": "^3.0",
         "drupal/bootstrap_layout_builder": "^2.0",
-        "drupal/captcha": "^2.0@beta",
-        "drupal/ckeditor5_paste_filter": "^1.0@alpha",
-        "drupal/ckeditor_accordion": "^2.0",
+        "drupal/captcha": "^2.0",
+        "drupal/ckeditor5_paste_filter": "^1.1",
+        "drupal/ckeditor_accordion": "^2.2",
         "drupal/ckeditor_bs_grid": "^2.0",
-        "drupal/clamav": "^2.0.2@RC",
+        "drupal/clamav": "^2.1",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/core-composer-scaffold": "^10.4",
         "drupal/core-project-message": "^10.4",
         "drupal/core-recommended": "^10.4",
-        "drupal/crop": "^2.3",
+        "drupal/crop": "^2.4",
+        "drupal/csv_serialization": "^4.0",
+        "drupal/diff": "^1.9",
         "drupal/easy_breadcrumb": "^2.0",
-        "drupal/editor_advanced_link": "^2.0",
-        "drupal/edw_healthcheck": "^1.18",
+        "drupal/editor_advanced_link": "^2.2",
+        "drupal/edw_healthcheck": "^1.27",
         "drupal/edwt": "^3.0",
         "drupal/elogger": "^1.1",
+        "drupal/encrypt": "^3.2",
         "drupal/environment_indicator": "^4.0",
-        "drupal/extlink": "^1.7",
+        "drupal/extlink": "^2.0",
         "drupal/facets": "^2.0",
-        "drupal/field_group": "^3.4",
-        "drupal/honeypot": "^2.0",
+        "drupal/field_group": "^3.6",
+        "drupal/honeypot": "^2.2",
         "drupal/image_widget_crop": "^2.4",
-        "drupal/imce": "^3.0",
+        "drupal/imce": "^3.1",
         "drupal/lang_dropdown": "dev-custom",
-        "drupal/layout_builder_browser": "^1.4",
-        "drupal/layout_builder_modal": "^1.1",
+        "drupal/layout_builder_browser": "^1.8",
+        "drupal/layout_builder_modal": "^1.3",
         "drupal/layout_builder_restrictions": "^2.12",
         "drupal/layout_builder_st": "^1.0@alpha",
-        "drupal/link_attributes": "^1.11",
+        "drupal/link_attributes": "^2.1",
         "drupal/media_library_edit": "^3.0",
+        "drupal/media_library_form_element": "^2.1",
         "drupal/media_responsive_thumbnail": "^1.3",
-        "drupal/menu_link_attributes": "^1.2",
-        "drupal/metatag": "^1.19",
+        "drupal/menu_link_attributes": "^1.5",
+        "drupal/metatag": "^2.1",
         "drupal/oembed_lazyload": "^2.0",
-        "drupal/optional_end_date": "^1.2",
-        "drupal/pathauto": "^1.9",
+        "drupal/optional_end_date": "^1.4",
+        "drupal/pathauto": "^1.13",
         "drupal/real_aes": "^2.5",
-        "drupal/recaptcha": "^3.2",
-        "drupal/redirect": "^1.7",
+        "drupal/recaptcha": "^3.4",
+        "drupal/redirect": "^1.11",
         "drupal/remove_username": "^1.3",
-        "drupal/search_api": "^1.23",
+        "drupal/search_api": "^1.38",
         "drupal/select2": "^1.15",
         "drupal/simple_search_form": "dev-custom",
-        "drupal/slick": "^2.11",
-        "drupal/slick_views": "^2.6",
-        "drupal/smart_trim": "^2.0",
-        "drupal/smtp": "^1.0",
-        "drupal/spamspan": "^3.0@beta",
-        "drupal/tfa": "^1.2",
+        "drupal/slick": "^3.0",
+        "drupal/slick_views": "^3.0",
+        "drupal/smart_trim": "^2.2",
+        "drupal/smtp": "^1.4",
+        "drupal/spamspan": "^3.2",
+        "drupal/tfa": "^1.10",
         "drupal/token": "^1.10",
-        "drupal/twig_tweak": "^3.3",
-        "drupal/webform": "^6.1",
+        "drupal/twig_tweak": "^3.4",
+        "drupal/views_bulk_operations": "^4.3",
+        "drupal/views_data_export": "^1.6",
+        "drupal/webform": "^6.2",
         "drupal/webp": "^1.0@beta",
         "drupal/xmlsitemap": "^1.2",
         "drush/drush": "^12",
