--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,8 @@
             "type": "composer",
             "url": "https://packages.drupal.org/8",
             "exclude": [
-                "drupal/simple_search_form",
-                "drupal/lang_dropdown",
-                "drupal/password_strength"
+                "drupal/password_strength",
+                "drupal/layout_builder_st"
             ]
         },
         {
@@ -37,26 +36,13 @@
         {
             "type": "package",
             "package": {
-                "name": "drupal/simple_search_form",
+                "name": "drupal/layout_builder_st",
                 "version": "dev-custom",
                 "type": "drupal-module",
                 "source": {
                     "type": "git",
-                    "url": "https://git.drupalcode.org/issue/simple_search_form-3289653.git",
-                    "reference": "8.x-1.x"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "drupal/lang_dropdown",
-                "version": "dev-custom",
-                "type": "drupal-module",
-                "source": {
-                    "type": "git",
-                    "url": "https://git.drupalcode.org/issue/lang_dropdown-3288198.git",
-                    "reference": "3288198-automated-drupal-10"
+                    "url": "https://git.drupalcode.org/issue/layout_builder_st-3497945.git",
+                    "reference": "3497945-minimal-phpcs"
                 }
             }
         },
@@ -87,9 +73,8 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/adequate_passwords": "^1.0",
         "drupal/admin_toolbar": "^3.6",
-        "drupal/advagg": "^6.0@alpha",
         "drupal/ajax_loader": "^2.1",
-        "drupal/allowed_formats": "^1.5",
+        "drupal/allowed_formats": "^3.0",
         "drupal/autologout": "^1.6",
         "drupal/backup_migrate": "^5.1",
         "drupal/blazy": "^3.0",
@@ -109,7 +94,7 @@
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/editor_advanced_link": "^2.2",
         "drupal/edw_healthcheck": "^1.27",
-        "drupal/edwt": "^3.0",
+        "drupal/edwt": "^4.0",
         "drupal/elogger": "^1.1",
         "drupal/encrypt": "^3.2",
         "drupal/environment_indicator": "^4.0",
@@ -117,17 +102,17 @@
         "drupal/facets": "^2.0",
         "drupal/field_group": "^3.6",
         "drupal/honeypot": "^2.2",
-        "drupal/image_widget_crop": "^2.4",
+        "drupal/image_widget_crop": "^3.0",
         "drupal/imce": "^3.1",
-        "drupal/lang_dropdown": "dev-custom",
+        "drupal/lang_dropdown": "^2.3",
         "drupal/layout_builder_browser": "^1.8",
         "drupal/layout_builder_modal": "^1.3",
-        "drupal/layout_builder_restrictions": "^2.12",
-        "drupal/layout_builder_st": "^1.0@alpha",
+        "drupal/layout_builder_restrictions": "^3.0",
+        "drupal/layout_builder_st": "dev-custom",
         "drupal/link_attributes": "^2.1",
         "drupal/media_library_edit": "^3.0",
         "drupal/media_library_form_element": "^2.1",
-        "drupal/media_responsive_thumbnail": "^1.3",
+        "drupal/media_responsive_thumbnail": "^2.0",
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
         "drupal/oembed_lazyload": "^2.0",
@@ -138,8 +123,8 @@
         "drupal/redirect": "^1.11",
         "drupal/remove_username": "^1.3",
         "drupal/search_api": "^1.38",
-        "drupal/select2": "^1.15",
-        "drupal/simple_search_form": "dev-custom",
+        "drupal/select2": "^2.0",
+        "drupal/simple_search_form": "^1.6",
         "drupal/slick": "^3.0",
         "drupal/slick_views": "^3.0",
         "drupal/smart_trim": "^2.2",
@@ -151,11 +136,11 @@
         "drupal/upgrade_status": "^4.3",
         "drupal/views_bulk_operations": "^4.3",
         "drupal/views_data_export": "^1.6",
-        "drupal/webform": "^6.2",
+        "drupal/webform": "^6.3@beta",
         "drupal/webp": "^1.0@beta",
-        "drupal/xmlsitemap": "^1.2",
+        "drupal/xmlsitemap": "^2.0",
         "drush/drush": "^13",
-        "eaudeweb/edw_modules": "dev-main",
+        "eaudeweb/edw_modules": "^2.0",
         "eaudeweb/heavy-lifter": "^2",
         "npm-asset/select2": "^4.0",
         "oomphinc/composer-installers-extender": "^2.0",
@@ -166,7 +151,7 @@
         "drupal/coder": "^8.3",
         "drupal/core-dev": "^10",
         "drupal/devel": "^5.1",
-        "drupal/stage_file_proxy": "^2.0",
+        "drupal/stage_file_proxy": "^3.1",
         "drupal/twig_vardumper": "^3.0",
         "mglaman/phpstan-drupal": "^1.1",
         "overtrue/phplint": "^9.0",
