--- a/config/default/block.block.breadcrumbs_2.yml
+++ b/config/default/block.block.breadcrumbs_2.yml
@@ -1,6 +1,6 @@
 uuid: 6432932c-bd31-422a-94de-1f78bd0502b3
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - system
@@ -8,7 +8,7 @@ dependencies:
     - edwt
 id: breadcrumbs_2
 theme: edwt
-region: breadcrumb
+region: top_page
 weight: 0
 provider: null
 plugin: system_breadcrumb_block
