--- a/config/default/field.field.block_content.html.body.yml
+++ b/config/default/field.field.block_content.html.body.yml
@@ -5,13 +5,9 @@ dependencies:
   config:
     - block_content.type.html
     - field.storage.block_content.body
+    - filter.format.full_html
   module:
-    - allowed_formats
     - text
-third_party_settings:
-  allowed_formats:
-    allowed_formats:
-      - full_html
 id: block_content.html.body
 field_name: body
 entity_type: block_content
@@ -25,5 +21,6 @@ default_value_callback: ''
 settings:
   display_summary: false
   required_summary: false
-  allowed_formats: {  }
+  allowed_formats:
+    - full_html
 field_type: text_with_summary
