--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
     ],
     "require": {
         "composer/installers": "^2.3",
-        "drupal/core-composer-scaffold": "^11",
-        "drupal/core-recipe-unpack": "^11",
-        "drupal/core-project-message": "^11",
-        "drupal/core-recommended": "^11"
+        "drupal/core-composer-scaffold": "dev-main",
+        "drupal/core-recipe-unpack": "dev-main",
+        "drupal/core-project-message": "dev-main",
+        "drupal/core-recommended": "dev-main"
     },
     "require-dev": {
-        "drupal/core-dev": "^11"
+        "drupal/core-dev": "dev-main"
     },
     "conflict": {
         "drupal/drupal": "*"
